--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site.css
@@ -5879,7 +5879,11 @@ div#layout-navigation.group > div.zone.zone-navigation > article.widget-navigati
 #layout-main-container {
     .clearfix;
 }*/
-/*switch: layout-main*/
+#layout-wrapper {
+  /*switch: layout-main*/
+  /*switch: layout-tripel*/
+  /*switch: footer-quad*/
+}
 #layout-wrapper.aside-12 .zone-content {
   position: relative;
   min-height: 1px;
@@ -5932,7 +5936,6 @@ div#layout-navigation.group > div.zone.zone-navigation > article.widget-navigati
     width: 33.33333333%;
   }
 }
-/*switch: layout-tripel*/
 #layout-wrapper.tripel-123 #layout-tripel > div {
   position: relative;
   min-height: 1px;
@@ -5961,24 +5964,632 @@ div#layout-navigation.group > div.zone.zone-navigation > article.widget-navigati
     width: 50%;
   }
 }
-#layout-wrapper.tripel-1 #layout-tripel > div {
+#layout-wrapper.tripel-1 #layout-tripel > div,
+#layout-wrapper.tripel-2 #layout-tripel > div,
+#layout-wrapper.tripel-3 #layout-tripel > div {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
 }
 @media (min-width: 992px) {
-  #layout-wrapper.tripel-1 #layout-tripel > div {
+  #layout-wrapper.tripel-1 #layout-tripel > div,
+  #layout-wrapper.tripel-2 #layout-tripel > div,
+  #layout-wrapper.tripel-3 #layout-tripel > div {
     float: left;
     width: 83.33333333%;
   }
 }
 @media (min-width: 992px) {
-  #layout-wrapper.tripel-1 #layout-tripel > div {
+  #layout-wrapper.tripel-1 #layout-tripel > div,
+  #layout-wrapper.tripel-2 #layout-tripel > div,
+  #layout-wrapper.tripel-3 #layout-tripel > div {
     margin-left: 8.33333333%;
   }
 }
-/*switch: footer-quad*/
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 3;
+}
+#layout-wrapper.split-13 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-13 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 4;
+}
+#layout-wrapper.split-14 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-14 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 3;
+}
+#layout-wrapper.split-13 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-13 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 4;
+}
+#layout-wrapper.split-14 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-14 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 3;
+}
+#layout-wrapper.split-13 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-13 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 2 3;
+}
+#layout-wrapper.split-23 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-23 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 2 4;
+}
+#layout-wrapper.split-24 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-24 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 3;
+}
+#layout-wrapper.split-13 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-13 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 4;
+}
+#layout-wrapper.split-14 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-14 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 3;
+}
+#layout-wrapper.split-13 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-13 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 2 3;
+}
+#layout-wrapper.split-23 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-23 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 2 4;
+}
+#layout-wrapper.split-24 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-24 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 3;
+}
+#layout-wrapper.split-13 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-13 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 2 3;
+}
+#layout-wrapper.split-23 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-23 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 3 4;
+}
+#layout-wrapper.split-34 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-34 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 3;
+}
+#layout-wrapper.split-13 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-13 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 4;
+}
+#layout-wrapper.split-14 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-14 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 3;
+}
+#layout-wrapper.split-13 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-13 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 2 3;
+}
+#layout-wrapper.split-23 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-23 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 2 4;
+}
+#layout-wrapper.split-24 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-24 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 3;
+}
+#layout-wrapper.split-13 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-13 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 1 2;
+}
+#layout-wrapper.split-12 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-12 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 2 3;
+}
+#layout-wrapper.split-23 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-23 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper #hello-inner:before {
+  content: 3 4;
+}
+#layout-wrapper.split-34 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-34 #footer-quad > div {
+    float: left;
+    width: 50%;
+  }
+}
+#layout-wrapper.split-1 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-1 #footer-quad > div {
+    float: left;
+    width: 100%;
+  }
+}
+#layout-wrapper.split-2 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-2 #footer-quad > div {
+    float: left;
+    width: 100%;
+  }
+}
+#layout-wrapper.split-3 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-3 #footer-quad > div {
+    float: left;
+    width: 100%;
+  }
+}
+#layout-wrapper.split-4 #footer-quad > div {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  #layout-wrapper.split-4 #footer-quad > div {
+    float: left;
+    width: 100%;
+  }
+}
 /* 
     Somes classes really need to be in the markup 
     for bootstrap selectors to work.
